# llama3

./: .gitignore  README.md  pyproject.toml
notebooks/: Dive into Llama3.1 and 3.2.ipynb
