[tool.poetry]
name = "llama3"
version = "0.1.0"
description = ""
authors = ["Phil Mui <pmui@salesforce.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>3.9"
torch = "^2.5.1"
transformers = "^4.46.3"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
